# demperm

./: .env.example  .gitignore  Dockerfile  INSTALL.md  PROJECT_SUMMARY.md  README.md  alembic.ini  app.py  docker-compose.yml  init_db.py  manage.py  nginx.conf  pyproject.toml  requirements.txt  setup.sh  test_api.py  test_unit.py  test_vote_server.py  vote_server.py
.github/workflows/: deploy.yml  vote_tests.yml
alembic/: env.py
android/: README.md  build.gradle  proguard-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
democracy/: admin.py  apps.py  models.py  urls.py  views.py
democracy/migrations/: 0001_initial.py
demperm/: __init__.py  asgi.py  database.py  main.py  schemas.py  settings.py  urls.py  wsgi.py
demperm/auth/: __init__.py
demperm/models/: __init__.py
docs/: AFAIRE.md
docs/client/web/: Archi Client Web - v1_0.md
docs/presentations/: vote_api_swagger-v1.yml  vote_api_swagger-v3.yml
ios-client/: README.md
ios-client/DemPerm/: AuthenticationView.swift  ContentView.swift  DemPermApp.swift  Proposal.swift  ProposalDetailView.swift  ProposalListView.swift  VoteView.swift
ios-client/DemPerm.xcodeproj/: project.pbxproj
src/client/android/: .gitignore  README.md  app.json  firebaseConfig.ts  package-lock.json  package.json  pnpm-lock.yaml
src/client/ios/: docker-compose.yml
src/client/web/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/serveur/social/: docker-compose.yml  requirements.txt
static/css/: style.css
templates/: about.html  base.html  dashboard.html  index.html  propose.html
tests/: conftest.py  test_auth.py  test_proposals.py
(+278 files in other folders)
